# meld

./: .gitignore  Cargo.toml  README.md  RUNTIME_PERFORMANCE.md  build.rs
benches/: meld.rs  multi.rs  single_module.rs
doc/spec/: TEF-v0.1.md
examples/: askama.rs  builder.rs  evaluator.rs  handlebars.rs  meld.rs
meld-go/: .gitignore  README.md  go.mod  go.sum
meld-go/cmd/bench/: main.go
meld-go/cmd/example/: main.go
meld-go/runtime/: opcodes.go  program.go  runtime.go  runtime_test.go  stack.go  value.go
meld-ts/: .gitignore  README.md  package.json  tsconfig.json
meld-ts/cmd/bench/: main.ts
meld-ts/cmd/example/: main.ts
meld-ts/runtime/: index.ts  opcodes.ts  program.ts  runtime.ts  stack.ts
samples/: bench.html  bench_giant.html  comprehensive.html  condition.html  loops.html
scripts/: counter.py  export_bench.py
spec/: TEF-v0.1.md
src/: lib.rs  main.rs  opcode.rs  utils.rs  value.rs
src/builder/: builder.rs  instruction.rs  mod.rs
src/builder/adapter/: mod.rs
src/compiler/: builder.rs  expression.rs  mod.rs
src/evaluator/: evaluator.rs  mod.rs  program.rs  stack.rs
src/runtime/: evaluator.rs  mod.rs  program.rs  stack.rs
templates/: askama.html  comprehensive.html  comprehensive.json  gonja.html  handlebars.html  html.html  meld.html  meld.json
