[package]
name = "meld"
version = "0.1.0"
edition = "2024"

[package.metadata.tef]
version = "0.1"

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
minify-html = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.6.0"
thiserror = "2.0.18"

[build-dependencies]
toml = "1.1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "single_module"
path = "benches/single_module.rs"
harness = false


